--- a/site/src/main/resources/templates/createExchangeF.html
+++ b/site/src/main/resources/templates/createExchangeF.html
@@ -33,7 +33,7 @@
                 </div>
 
         <div class="col-2" >
-            <img src="https://icon-library.com/images/swap-icon-png/swap-icon-png-21.jpg" class="swap"/>
+            <img src="https://www.pngall.com/wp-content/uploads/9/Exchange-Silhouette-PNG-Image-File.png" class="swap"/>
         </div>
 
                 <div class="col-5" >
