--- a/site/src/main/resources/static/css/main.css
+++ b/site/src/main/resources/static/css/main.css
@@ -1,7 +1,7 @@
 .libimg{
-    max-height: 36em;
+    max-height: 30em;
     max-width: 25em;
-    min-height: 32em;
+    min-height: 25em;
     min-width: 10em;
 }
 .eximg{
@@ -25,8 +25,10 @@
 
 .swap{
     filter:  brightness(0) invert(1);
-    width: 7em;
-    height: 6em;
+    max-height: 7em;
+    max-width: 6em;
+    min-height: 1em;
+    min-width: 1em;
  }
 .chat_ava{
     border-radius: 50%;
@@ -192,10 +194,17 @@ a{
     body{
         font-size: 12px;
     }
-
+    .nav-mobile{
+        padding-top: 30px !important;
+    }
+    .swap{
+        filter:  brightness(0) invert(1);
+        width: 4em;
+        height: 4em;
+    }
     .block_exchange_book img{
         width: 100%;
-        height: 80px;
+        height: 180px;
     }
 
     .user img{
