--- a/site/src/main/resources/templates/exchangeDetails.html
+++ b/site/src/main/resources/templates/exchangeDetails.html
@@ -1,6 +1,6 @@
 <html   xmlns:th = "http://www.thymeleaf.org" xmlns:layout = "http://ultraq.net.nz/thymeleaf/layout" layout:decorate = "layout/loginLayout.html" >
 
-<div layout:fragment="site_content" class="container-fluid libcontainer m-0" >
+<div layout:fragment="site_content" class=" libcontainer m-0" >
 
     <main class="wrapper">
         <div class="alert alert-success mt-2" role="alert" th:text="${successA}" th:if="${successA}"></div>
@@ -8,7 +8,7 @@
             <div class="">
 
                 <div class="exchange">
-                    <div class="row">
+                    <div class="row m-0">
                         <div class="col-12 user">
                             <div class="block_date" th:text="${exchange.getDate()}">
                                 20.10.2021
@@ -22,7 +22,7 @@
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius ea voluptates dolor quam vitae non recusandae?
                             </div>
                         </div>
-                        <div class="col-12 block">
+                        <div class="col-12  ">
 
                             <div class="block_exchange">
 
@@ -36,7 +36,7 @@
 <!--                                                    </div>-->
 
 <!--                                                </div>-->
-                                                <div th:each="book : ${exchange.getUserBooks()}" class="block_exchange_book book1 col-4">
+                                                <div th:each="book : ${exchange.getUserBooks()}" class="block_exchange_book book1 col-md-4">
                                                     <img th:src="@{'/viewuserbook/'+${book.getCover()}}" alt="bookImg">
                                                     <p th:text="${book.getBook().getTitle()}">Три товарища</p>
                                                     <p th:text="${book.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
@@ -48,7 +48,7 @@
                                         </div>
 
                                         <div class="col-2" style="margin-top: 3em !important;">
-                                            <img src="https://icon-library.com/images/swap-icon-png/swap-icon-png-21.jpg" class="swap"/>
+                                            <img src="https://www.pngall.com/wp-content/uploads/9/Exchange-Silhouette-PNG-Image-File.png" class="swap"/>
                                         </div>
 
                                         <div class="col-5" >
@@ -63,7 +63,7 @@
 <!--                                                    </div>-->
 
 <!--                                                </div>-->
-                                                <div th:each="book : ${exchange.getBooks()}" class="block_exchange_book book1 col-4">
+                                                <div th:each="book : ${exchange.getBooks()}" class="block_exchange_book book1 col-md-4">
                                                     <img th:src="@{'/viewbookex/'+${book.getCover()}}" alt="bookImg">
                                                     <p th:text="${book.getTitle()}">Три товарища</p>
                                                     <p th:text="${book.getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
@@ -88,6 +88,8 @@
                     </div>
                     <div class="container-fluid" th:styleappend="${offer.isPicked()} ? 'background-color: darkgreen' : ''">
 
+                    <div   class="row m-0">
+
                         <div class="col-12 user">
                             <div class="block_date" th:text="${offer.getDate()}">
                             20.10.2021
@@ -103,11 +105,11 @@
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, cum. Illum adipisci maxime aliquam cum deleniti inventore error enim id accusantium neque, quidem, voluptas recusandae eius nulla qui eaque architecto?
                             </div>
                         </div>
-                        <div class="col-12 block">
+                        <div class="col-12  block">
 
-                            <div class="block_exchange">
+                            <div class="block_exchange row m-0">
 
-                                <div th:each="userBook : ${offer.getUserBooks()}" class="block_exchange_book book1">
+                                <div th:each="userBook : ${offer.getUserBooks()}" class="block_exchange_book book1 col-4 col-md-2">
                                     <img th:src="@{'/viewuserbook/'+${userBook.getCover()}}" alt="bookImg">
                                     <p th:text="${userBook.getBook().getTitle()}">Три товарища</p>
                                     <p th:text="${userBook.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
@@ -161,9 +163,9 @@
                     <!--                </div>-->
                     <div class="col-12 block">
 
-                        <div class="block_exchange">
+                        <div class="block_exchange row">
 
-                            <div th:each="userBook : ${currentOfferBooks}" class="block_exchange_book book1">
+                            <div th:each="userBook : ${currentOfferBooks}" class="block_exchange_book book1 col-4 col-md-2">
                                 <a th:href="@{'/removebookfromoffer?id='+${userBook.getId()} + '&exchange_id=' +${exchange.getId()}}">
                                     <img th:src="@{'/viewuserbook/'+${userBook.getCover()}}" alt="bookImg">
                                     <p th:text="${userBook.getBook().getTitle()}">Три товарища</p>
@@ -182,13 +184,13 @@
             </div>
                 <div class="alert alert-danger mt-2" role="alert" th:text="${errorA}" th:if="${errorA}"></div>
                 <form method="get" th:action="@{'#pickUserBooks'}"  class="mt-3" id="pickUserBooks">
-                    <div class="row pl-4">
-                        <input type="text" class="form-control col-11 shadow " name="searchUserStr" >
-                        <button class="btn btn-info col-1 shadow"style="position: relative; right: 20px" >Search</button>
+                    <div class="row m-0 pl-4">
+                        <input type="text" class="form-control col-9 shadow " name="searchUserStr" >
+                        <button class="btn btn-info col-3 shadow"style="position: relative; right: 20px" >Search</button>
                     </div>
                 </form>
-            <div class="  row m-2">
-                <div th:each="book : ${userBooks}" class="block_exchange_book book1 col-2">
+            <div class="  row m-0">
+                <div th:each="book : ${userBooks}" class="block_exchange_book book1 col-md-2 col-4">
                     <div class="exchange">
                         <img th:src="@{'/viewuserbook/'+${book.getCover()}}" class="" alt="...">
                         <div class=" ">
