--- a/admin/src/main/resources/templates/admin.html
+++ b/admin/src/main/resources/templates/admin.html
@@ -23,6 +23,7 @@
 
                             </select><br>
                             <input type="file" class="form-control" name="cover">
+                            <input type="text" class="form-control" name="isbn">
                         </div>
                         <div class="modal-footer">
                             <button type="submit" class="btn btn-primary" style="background-color: rgba(46,86,80,1);">ADD</button>
